# seq2seq-entity-tagger

./: .gitignore  Makefile  README.md  pyproject.toml
data/: training_config.json  training_config_default.json
src/: config.py  extract_wikipedia.py  logger.py  paths.py  predict_sentence.py  prepare_model_inputs.py  prepare_training_data.py  preprocess.py  preprocess_article.py  process_wiki.py  regex_collection.py  tokenize_training_data.py  train_model.py
src/wikipedia/: __init__.py  extract_articles.py  extract_sentences.py  format_sentences.py
tests/data/: test_articles.json
