[tool.poetry]
name = "seq2seq-entity-tagger"
version = "0.1.0"
description = "tag entities in a given document using a sequence to sequence model"
authors = ["karimvision <kabdulmunaff@brandwatch.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = {url = "https://download.pytorch.org/whl/nightly/cpu/torch-2.0.0.dev20230106-cp39-none-macosx_11_0_arm64.whl"}
transformers = "^4.25.1"
tqdm = "^4.64.1"
typer = "^0.7.0"
pandas = "^1.5.2"
datasets = "^2.8.0"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
